--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angular-cli-ghpages": "^0.6.2",
     "moment": "^2.24.0",
     "ngx-moment": "^3.5.0",
     "rxjs": "~6.4.0",
