Add first i18n translations

--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
+    "@ngx-translate/core": "^12.0.0",
+    "@ngx-translate/http-loader": "^4.0.0",
     "angular-cli-ghpages": "^0.6.2",
     "moment": "^2.24.0",
     "ngx-moment": "^3.5.0",
-    "rxjs": "~6.5.4",
+    "rxjs": "^6.5.4",
     "tslib": "^1.10.0",
     "unsplash-js": "^6.0.0",
     "zone.js": "~0.10.2"
@@ -35,7 +37,7 @@
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
-    "@types/unsplash-js": "^6.0.1", 
+    "@types/unsplash-js": "^6.0.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
