Remove red color from code

--- a/angular.json
+++ b/angular.json
@@ -129,5 +129,8 @@
       }
     }
   },
-  "defaultProject": "unsplash"
+  "defaultProject": "unsplash",
+  "cli": {
+    "analytics": false
+  }
 }
